Saved models with pickle

--- a/Models/Pitching/all_pitchers_gbc_pitch.ipynb
+++ b/Models/Pitching/all_pitchers_gbc_pitch.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "source": [
-    "# Import dependcies\r\n",
+    "# Import dependencies\r\n",
     "import pandas as pd\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\r\n",
+    "from sklearn.metrics import accuracy_score, classification_report\r\n",
     "from sklearn.ensemble import GradientBoostingClassifier\r\n",
+    "\r\n",
+    "import pickle\r\n",
     "\r\n",
     "# Create global seed\r\n",
     "yogi = 8"
@@ -20,10 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "source": [
     "# Read in data \r\n",
-    "file_path = '../Data/Pitchers/top_nine_pitchers.csv'\r\n",
+    "file_path = '../../Data/Pitchers/top_nine_pitchers.csv'\r\n",
     "pitchers_df = pd.read_csv(file_path)\r\n",
     "\r\n",
     "pitchers_df.dropna(inplace = True)\r\n",
@@ -375,16 +377,16 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "source": [
-    "# Drop Unnamed columns\r\n",
+    "# Drop Unnecessary columns\r\n",
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp', 'release_pos_x', 'release_pos_z'], axis = 1, inplace = True)"
    ],
    "outputs": [],
@@ -392,8 +394,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "source": [
+    "# Combine 'ball' and 'in play' values into 'not strike' bin\r\n",
     "not_strike = ['B', 'X']\r\n",
     "\r\n",
     "pitchers_df['type'].replace(not_strike, 'N', inplace = True)"
@@ -403,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "source": [
     "# Generate categorical variable list\r\n",
     "pitch_cat = pitchers_df.dtypes[pitchers_df.dtypes == 'object'].index.tolist()\r\n",
@@ -420,14 +423,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "source": [
     "# Create a OneHotEncoder instance\r\n",
     "enc = OneHotEncoder(sparse = False)\r\n",
@@ -580,14 +583,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "source": [
     "# Merge one-hot encoded features and drop the originals\r\n",
     "pitchers_df = pitchers_df.merge(\r\n",
@@ -803,14 +806,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "source": [
     "# Drop superfluous columns \r\n",
     "pitchers_df.drop(columns = ['stand_L', 'p_throws_L'], axis = 1, inplace = True)\r\n",
@@ -1012,7 +1015,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -1026,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
@@ -1217,14 +1220,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['type'].values\r\n",
@@ -1239,14 +1242,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi)"
@@ -1256,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "source": [
     "# Create a StandardScaler instance\r\n",
     "scaler = StandardScaler()\r\n",
@@ -1280,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
@@ -1361,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
@@ -1536,7 +1539,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -1550,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -1569,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -1597,27 +1600,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "source": [
-    "X.columns"
+    "# Save model file\r\n",
+    "filename = '../Saved/all_pitchers_gbc_pitch.sav'\r\n",
+    "pickle.dump(classifier, open(filename, 'wb'))"
    ],
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Index(['release_speed', 'zone', 'balls', 'strikes', 'inning',\n",
-       "       'release_spin_rate', 'release_extension', 'pitch_number',\n",
-       "       'pitch_type_CH', 'pitch_type_CU', 'pitch_type_FC', 'pitch_type_FF',\n",
-       "       'pitch_type_FT', 'pitch_type_KC', 'pitch_type_SI', 'pitch_type_SL',\n",
-       "       'stand_R', 'p_throws_R'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 34
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'pickle' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-d78e453cc8f3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Save model file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'all_pitchers_gbc_pitch.sav'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mclassifier\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'wb'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pickle' is not defined"
+     ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
