--- a/Models/Pitching/all_pitchers_log_pitch.ipynb
+++ b/Models/Pitching/all_pitchers_log_pitch.ipynb
@@ -2,15 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "source": [
-    "# Import dependcies\r\n",
+    "# Import dependencies\r\n",
     "import pandas as pd\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\r\n",
     "from sklearn.linear_model import LogisticRegression\r\n",
+    "\r\n",
+    "import pickle \r\n",
     "\r\n",
     "# Create global seed\r\n",
     "yogi = 8"
@@ -20,10 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "source": [
     "# Read in data \r\n",
-    "file_path = '../Data/Pitchers/top_nine_pitchers.csv'\r\n",
+    "file_path = '../../Data/Pitchers/top_nine_pitchers.csv'\r\n",
     "pitchers_df = pd.read_csv(file_path)\r\n",
     "\r\n",
     "pitchers_df.dropna(inplace = True)\r\n",
@@ -375,7 +377,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 4
     }
    ],
    "metadata": {}
@@ -389,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "source": [
     "# Drop unnecessary columns\r\n",
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp', 'release_pos_x', 'release_pos_z'], axis = 1, inplace = True)"
@@ -399,9 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "source": [
-    "# Bin 'balls' and 'in play' into one category\r\n",
+    "# Combine 'ball' and 'in play' into 'not strike' bin\r\n",
     "not_strike = ['B', 'X']\r\n",
     "\r\n",
     "pitchers_df['type'].replace(not_strike, 'N', inplace = True)"
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "source": [
     "# Generate categorical variable list\r\n",
     "pitch_cat = pitchers_df.dtypes[pitchers_df.dtypes == 'object'].index.tolist()\r\n",
@@ -428,14 +430,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "source": [
     "# Create a OneHotEncoder instance\r\n",
     "enc = OneHotEncoder(sparse = False)\r\n",
@@ -588,14 +590,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "source": [
     "# Merge one-hot encoded features and drop the originals\r\n",
     "pitchers_df = pitchers_df.merge(\r\n",
@@ -811,14 +813,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "source": [
     "# Drop superfluous columns \r\n",
     "pitchers_df.drop(columns = ['stand_L', 'p_throws_L'], axis = 1, inplace = True)\r\n",
@@ -1020,7 +1022,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -1034,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
@@ -1225,14 +1227,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['type'].values\r\n",
@@ -1247,14 +1249,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi, stratify =  y)"
@@ -1264,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "source": [
     "# Create a StandardScaler instance\r\n",
     "scaler = StandardScaler()\r\n",
@@ -1288,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "source": [
     "# Create classifier object\r\n",
     "classifier = LogisticRegression(solver = 'lbfgs', random_state = yogi)\r\n",
@@ -1303,7 +1305,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 15
     }
    ],
    "metadata": {}
@@ -1317,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "source": [
     "# Train the data\r\n",
     "classifier.fit(X_train_scaled, y_train)\r\n",
@@ -1484,7 +1486,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 16
     }
    ],
    "metadata": {}
@@ -1498,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -1517,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -1541,6 +1543,17 @@
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "# Save model file\r\n",
+    "filename = '../Saved/all_pitchers_log_pitch.sav'\r\n",
+    "pickle.dump(classifier, open(filename, 'wb'))"
+   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
