--- a/Models/Zone/all_pitchers_gbc_zone.ipynb
+++ b/Models/Zone/all_pitchers_gbc_zone.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "source": [
-    "# Import dependcies\r\n",
+    "# Import dependencies\r\n",
     "import pandas as pd\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
     "from sklearn.model_selection import train_test_split\r\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\r\n",
     "from sklearn.ensemble import GradientBoostingClassifier\r\n",
+    "\r\n",
     "import pickle\r\n",
     "\r\n",
     "# Create global seed\r\n",
@@ -21,10 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "source": [
     "# Read in data \r\n",
-    "file_path = '../Data/Pitchers/top_nine_pitchers.csv'\r\n",
+    "file_path = '../../Data/Pitchers/top_nine_pitchers.csv'\r\n",
     "pitchers_df = pd.read_csv(file_path)\r\n",
     "\r\n",
     "pitchers_df.dropna(inplace = True)\r\n",
@@ -376,14 +377,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "source": [
     "list(pitchers_df.columns)"
    ],
@@ -431,14 +432,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 3
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "source": [
     "pitchers_df['strikes'].unique()"
    ],
@@ -451,14 +452,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 4
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "source": [
     "# Drop Unnamed columns\r\n",
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'type', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp'], axis = 1, inplace = True)"
@@ -468,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "source": [
     "# ball_zone = [11.0, 12.0, 13.0, 14.0]\r\n",
     "# strike_zone = [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0]\r\n",
@@ -488,14 +489,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 6
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "source": [
     "# Generate categorical variable list\r\n",
     "pitch_cat = pitchers_df.dtypes[pitchers_df.dtypes == 'object'].index.tolist()\r\n",
@@ -511,14 +512,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 7
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "source": [
     "# Create a OneHotEncoder instance\r\n",
     "enc = OneHotEncoder(sparse = False)\r\n",
@@ -671,14 +672,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 8
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "source": [
     "# Merge one-hot encoded features and drop the originals\r\n",
     "pitchers_df = pitchers_df.merge(\r\n",
@@ -894,14 +895,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 9
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "source": [
     "# Drop superfluous columns \r\n",
     "pitchers_df.drop(columns = ['stand_L', 'p_throws_L'], axis = 1, inplace = True)\r\n",
@@ -1112,7 +1113,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 10
     }
    ],
    "metadata": {}
@@ -1126,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "source": [
     "# Define features set\r\n",
     "X = pitchers_df.copy()\r\n",
@@ -1323,14 +1324,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 11
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "source": [
     "# Define target vector\r\n",
     "y = pitchers_df['zone'].values\r\n",
@@ -1345,14 +1346,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 12
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "source": [
     "# Split the data into training and testing sets - stratify by pitcher\r\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state = yogi, stratify = y)"
@@ -1362,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "source": [
     "# Create a StandardScaler instance\r\n",
     "scaler = StandardScaler()\r\n",
@@ -1379,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "source": [
     "X.columns"
    ],
@@ -1397,7 +1398,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 31
+     "execution_count": 15
     }
    ],
    "metadata": {}
@@ -1411,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "source": [
     "# Create a classifier object\r\n",
     "learning_rates = [0.05, 0.1, 0.25, 0.5, 0.75, 1]\r\n",
@@ -1492,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "source": [
     "# Choose a learning rate and create classifiers\r\n",
     "classifier = GradientBoostingClassifier(\r\n",
@@ -1667,7 +1668,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 33
+     "execution_count": 17
     }
    ],
    "metadata": {}
@@ -1681,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "source": [
     "# Calculate accuracy score\r\n",
     "acc_score = accuracy_score(y_test, predictions)\r\n",
@@ -1700,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "source": [
     "# Generate classification report\r\n",
     "print('Classification Report')\r\n",
@@ -1739,23 +1740,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "source": [
     "# Save model file\r\n",
-    "# filename = 'all_pitchers_zone.sav'\r\n",
-    "# pickle.dump(classifier, open(filename, 'wb'))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "source": [
-    "# Load model\r\n",
-    "# loaded_model = pickle.load(open('all_pitchers_zone.sav', 'rb'))\r\n",
-    "# result = loaded_model.predict(X_test_scaled[0].reshape(1, -1))\r\n",
-    "# print(result)"
+    "filename = '../Saved/all_pitchers_zone.sav'\r\n",
+    "pickle.dump(classifier, open(filename, 'wb'))"
    ],
    "outputs": [],
    "metadata": {}
