Update models with config information for database

--- a/Models/Pitching/all_pitchers_gbc_pitch.ipynb
+++ b/Models/Pitching/all_pitchers_gbc_pitch.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# Import dependencies\r\n",
+    "# Import model dependencies\r\n",
     "import pandas as pd\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
@@ -12,7 +12,11 @@
     "from sklearn.metrics import accuracy_score, classification_report\r\n",
     "from sklearn.ensemble import GradientBoostingClassifier\r\n",
     "\r\n",
+    "# Import pickle\r\n",
     "import pickle\r\n",
+    "\r\n",
+    "# Import config information\r\n",
+    "from config import USER_NAME, PASSWORD\r\n",
     "\r\n",
     "# Create global seed\r\n",
     "yogi = 8"
