--- a/Models/Zone/all_pitchers_gbc_zone.ipynb
+++ b/Models/Zone/all_pitchers_gbc_zone.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# Import dependencies\r\n",
+    "# Import model dependencies\r\n",
     "import pandas as pd\r\n",
     "from sklearn import tree\r\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\r\n",
@@ -12,7 +12,11 @@
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\r\n",
     "from sklearn.ensemble import GradientBoostingClassifier\r\n",
     "\r\n",
+    "# Import pickle\r\n",
     "import pickle\r\n",
+    "\r\n",
+    "# Import config information\r\n",
+    "from config import USER_NAME, PASSWORD\r\n",
     "\r\n",
     "# Create global seed\r\n",
     "yogi = 8"
@@ -384,61 +388,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "list(pitchers_df.columns)"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "['Unnamed: 0',\n",
-       " 'Unnamed: 0.1',\n",
-       " 'pitch_type',\n",
-       " 'release_speed',\n",
-       " 'release_pos_x',\n",
-       " 'release_pos_z',\n",
-       " 'player_name',\n",
-       " 'zone',\n",
-       " 'game_type',\n",
-       " 'stand',\n",
-       " 'p_throws',\n",
-       " 'type',\n",
-       " 'balls',\n",
-       " 'strikes',\n",
-       " 'pfx_x',\n",
-       " 'pfx_z',\n",
-       " 'plate_x',\n",
-       " 'plate_z',\n",
-       " 'inning',\n",
-       " 'vx0',\n",
-       " 'vy0',\n",
-       " 'ax',\n",
-       " 'ay',\n",
-       " 'az',\n",
-       " 'sz_top',\n",
-       " 'sz_bot',\n",
-       " 'effective_speed',\n",
-       " 'release_spin_rate',\n",
-       " 'release_extension',\n",
-       " 'release_pos_y',\n",
-       " 'at_bat_number',\n",
-       " 'pitch_number',\n",
-       " 'pitch_name',\n",
-       " 'spin_axis',\n",
-       " 'delta_home_win_exp',\n",
-       " 'delta_run_exp']"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 3
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "source": [
     "pitchers_df['strikes'].unique()"
@@ -465,33 +414,6 @@
     "pitchers_df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'pitch_name', 'game_type', 'plate_x', 'plate_z', 'vx0', 'vy0', 'ax', 'ay', 'az', 'effective_speed', 'release_pos_y', 'at_bat_number', 'spin_axis', 'type', 'delta_home_win_exp', 'pfx_x', 'pfx_z', 'sz_top', 'sz_bot', 'delta_run_exp'], axis = 1, inplace = True)"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "source": [
-    "# ball_zone = [11.0, 12.0, 13.0, 14.0]\r\n",
-    "# strike_zone = [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0]\r\n",
-    "\r\n",
-    "# pitchers_df['zone'].replace(ball_zone, 0, inplace = True)\r\n",
-    "\r\n",
-    "# pitchers_df['zone'].replace(strike_zone, 1, inplace = True)\r\n",
-    "\r\n",
-    "pitchers_df['zone'].unique()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([14., 13.,  7.,  3.,  4.,  8.,  2., 11.,  1.,  6.,  5.,  9., 12.])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 6
-    }
-   ],
    "metadata": {}
   },
   {
