SQL Resources and data preparation

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2161,13 +2161,286 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e632fdae",
+   "execution_count": 36,
+   "id": "b33b5c02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>pitch_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>X</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>B</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>S</td>\n",
+       "      <td>SL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>S</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>S</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732468</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732469</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732470</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>S</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732471</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>X</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732472</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>B</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>997220 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            player_name type pitch_type\n",
+       "0       Fairbanks, Pete    X         FF\n",
+       "1       Fairbanks, Pete    B         FF\n",
+       "2       Fairbanks, Pete    S         SL\n",
+       "3       Fairbanks, Pete    S         FF\n",
+       "4       Fairbanks, Pete    S         FF\n",
+       "...                 ...  ...        ...\n",
+       "732468      Fiers, Mike    S        NaN\n",
+       "732469      Fiers, Mike    S        NaN\n",
+       "732470      Fiers, Mike    S        NaN\n",
+       "732471      Fiers, Mike    X        NaN\n",
+       "732472      Fiers, Mike    B        NaN\n",
+       "\n",
+       "[997220 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitcher_strikes = df_clean[['player_name','type','pitch_type']]\n",
+    "#pitcher_strikes = pitcher_strikes[pitcher_strikes['type'].isnull() == False]\n",
+    "pitcher_strikes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "1f1613d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>zone</th>\n",
+       "      <th>pitch_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>SL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Fairbanks, Pete</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>FF</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732468</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732469</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732470</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732471</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>732472</th>\n",
+       "      <td>Fiers, Mike</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>997220 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            player_name  zone pitch_type\n",
+       "0       Fairbanks, Pete  14.0         FF\n",
+       "1       Fairbanks, Pete  12.0         FF\n",
+       "2       Fairbanks, Pete   5.0         SL\n",
+       "3       Fairbanks, Pete   6.0         FF\n",
+       "4       Fairbanks, Pete  12.0         FF\n",
+       "...                 ...   ...        ...\n",
+       "732468      Fiers, Mike   NaN        NaN\n",
+       "732469      Fiers, Mike   NaN        NaN\n",
+       "732470      Fiers, Mike   NaN        NaN\n",
+       "732471      Fiers, Mike   NaN        NaN\n",
+       "732472      Fiers, Mike   NaN        NaN\n",
+       "\n",
+       "[997220 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitcher_zones = df_clean[['player_name','zone','pitch_type']]\n",
+    "#pitcher_zones = pitcher_zones[pitcher_zones['zone'].isnull() == False]\n",
+    "pitcher_zones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "da032a7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "team_data_df = df_teams"
+    "pitcher_strikes.to_csv('resources/strikes.csv')\n",
+    "pitcher_zones.to_csv('resources/zones.csv')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f93c9728",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
