Data cleaning fixes

--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2162,7 +2162,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "b33b5c02",
+   "id": "4bedee28",
    "metadata": {},
    "outputs": [
     {
@@ -2287,14 +2287,14 @@
    ],
    "source": [
     "pitcher_strikes = df_clean[['player_name','type','pitch_type']]\n",
-    "#pitcher_strikes = pitcher_strikes[pitcher_strikes['type'].isnull() == False]\n",
+    "pitcher_strikes = pitcher_strikes[pitcher_strikes['type'].isnull() == False]\n",
     "pitcher_strikes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1f1613d2",
+   "id": "8b77d0cf",
    "metadata": {},
    "outputs": [
     {
@@ -2419,14 +2419,14 @@
    ],
    "source": [
     "pitcher_zones = df_clean[['player_name','zone','pitch_type']]\n",
-    "#pitcher_zones = pitcher_zones[pitcher_zones['zone'].isnull() == False]\n",
+    "pitcher_zones = pitcher_zones[pitcher_zones['zone'].isnull() == False]\n",
     "pitcher_zones"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "da032a7c",
+   "id": "2d97daea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2437,7 +2437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93c9728",
+   "id": "55ccec43",
    "metadata": {},
    "outputs": [],
    "source": []
