--- a/MLB_Statcast_2019.ipynb
+++ b/MLB_Statcast_2019.ipynb
@@ -52,8 +52,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b5c36495",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "statcast_df = pd.read_csv('Data/Statcast_2020.csv')\n",
+    "batters_df = pd.read_csv('Data/batters_2019.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db9f6fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'pitch_type', 'game_date', 'release_speed',\n",
+       "       'release_pos_x', 'release_pos_z', 'player_name', 'batter', 'pitcher',\n",
+       "       'events', 'description', 'spin_dir', 'spin_rate_deprecated',\n",
+       "       'break_angle_deprecated', 'break_length_deprecated', 'zone', 'des',\n",
+       "       'game_type', 'stand', 'p_throws', 'home_team', 'away_team', 'type',\n",
+       "       'hit_location', 'bb_type', 'balls', 'strikes', 'game_year', 'pfx_x',\n",
+       "       'pfx_z', 'plate_x', 'plate_z', 'on_3b', 'on_2b', 'on_1b',\n",
+       "       'outs_when_up', 'inning', 'inning_topbot', 'hc_x', 'hc_y',\n",
+       "       'tfs_deprecated', 'tfs_zulu_deprecated', 'fielder_2', 'umpire', 'sv_id',\n",
+       "       'vx0', 'vy0', 'vz0', 'ax', 'ay', 'az', 'sz_top', 'sz_bot',\n",
+       "       'hit_distance_sc', 'launch_speed', 'launch_angle', 'effective_speed',\n",
+       "       'release_spin_rate', 'release_extension', 'game_pk', 'pitcher.1',\n",
+       "       'fielder_2.1', 'fielder_3', 'fielder_4', 'fielder_5', 'fielder_6',\n",
+       "       'fielder_7', 'fielder_8', 'fielder_9', 'release_pos_y',\n",
+       "       'estimated_ba_using_speedangle', 'estimated_woba_using_speedangle',\n",
+       "       'woba_value', 'woba_denom', 'babip_value', 'iso_value',\n",
+       "       'launch_speed_angle', 'at_bat_number', 'pitch_number', 'pitch_name',\n",
+       "       'home_score', 'away_score', 'bat_score', 'fld_score', 'post_away_score',\n",
+       "       'post_home_score', 'post_bat_score', 'post_fld_score',\n",
+       "       'if_fielding_alignment', 'of_fielding_alignment', 'spin_axis',\n",
+       "       'delta_home_win_exp', 'delta_run_exp'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "statcast_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7e5c1d5",
    "metadata": {},
    "outputs": [],
    "source": []
